[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "monty"
maintainers = [
    { name = "Shyue Ping Ong", email = "shyuep@gmail.com" },
]
description = "Monty is the missing complement to Python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "ruamel.yaml",
  "numpy",
]
version = "2026.7.16"

[project.optional-dependencies]
# dev is for "dev" module, not for development
dev = ["ipython"]
json = [
  "pymongo",
  "orjson>=3.6.1",
  "pandas",
  "pydantic",
  "pint",
  # Note: need torch>=2.3.0 for numpy 2 # 719
  "torch",
]
multiprocessing = ["tqdm"]
optional = ["monty[dev,json,multiprocessing,serialization]"]
serialization = ["msgpack"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["monty", "monty.*"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests
  )/
)
'''

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "@deprecated",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "show_plot",
    "if TYPE_CHECKING:",
    "except ImportError:"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "I",      # isort
  "PERF",   # perflint
  "PL",     # pylint
  "PIE",    # flake8-pie
  "RET",    # flake8-return
  "RUF",    # ruff-specific
  "SIM",    # flake8-simplify
  "TC",     # flake8-type-checking
  "UP",     # pyupgrade
]
ignore = [
  "PLR2004",  # magic value comparison (too noisy)
  "PLR0911",  # too many return statements
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
  "PLW2901",  # redefined loop name (idiomatic in places)
  "PERF203",  # try/except inside loop
  "PLC0415",  # imports inside functions for optional deps
  "SIM105",   # contextlib.suppress (occasionally clearer as try/except)
  "SIM115",   # context manager for files (already-yielded fds)
  "RUF012",   # mutable class attribute should be ClassVar
  "TC006",    # quote types in typing.cast() (no real benefit)
]

[tool.ruff.lint.per-file-ignores]
"src/monty/io.py" = ["PLC0414"]      # intentional re-export of EncodingWarning
"src/monty/termcolor.py" = ["PLW0603"]  # intentional global toggle
"tests/**" = ["B", "PL", "PERF", "RET", "RUF043", "SIM"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["monty"]

[tool.uv]
default-groups = "all"

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.0.0",
]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]
maintain = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "requests",
    "invoke",
    "myst-parser",
    "sphinx-markdown-builder",
    "roman-numerals",
]
